InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContextRuleset__c/fields/vlocity_ins__Expression__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Expression__c</fullName>
    <label>Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>