InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContextRuleset__c/fields/vlocity_ins__FallbackRule__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FallbackRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rule Id of the fallback rule ( 1 per ruleset) (IsFallBackRule = TRUE)</description>
    <label>Fallback Rule</label>
    <referenceTo>vlocity_ins__ContextRule__c</referenceTo>
    <relationshipLabel>Vlocity Context Rulesets (Fallback Rule)</relationshipLabel>
    <relationshipName>Vlocity_Context_Rulesets1</relationshipName>
    <type>Lookup</type>
</CustomField>