InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContextRuleset__c/fields/vlocity_ins__GlobalKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GlobalKey__c</fullName>
    <description>The globally unique identifier of this context rule set. Used to identify the context rule set across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique context rule set identifier can be used.</description>
    <externalId>true</externalId>
    <label>Global Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>