InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContextRuleset__c/fields/vlocity_ins__HeaderRule__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__HeaderRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Header rule ,which will determine if this ruleset breaks or not. This is the Id of Rule with (IsRuleHeader flag = True) ( denormalized)</description>
    <label>HeaderRule</label>
    <referenceTo>vlocity_ins__ContextRule__c</referenceTo>
    <relationshipLabel>Vlocity Context Rulesets</relationshipLabel>
    <relationshipName>Vlocity_Context_Rulesets</relationshipName>
    <type>Lookup</type>
</CustomField>