InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContextRuleset__c/fields/vlocity_ins__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ObjectId__c</fullName>
    <description>ID of the object against which the ruleset will be executed</description>
    <label>Object Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>